nit: fix li hover scale not covering actual height

--- a/src/public/css/pages/hunting-quest/index.css
+++ b/src/public/css/pages/hunting-quest/index.css
@@ -10,6 +10,7 @@
 
   > li {
     flex: 1 1 min(80vw, 500px);
+    height: 100%;
   }
 }
 
